--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#007AFF" />
-  <meta name="description" content="PixelPure - AI 背景去除工具，快速、免费、高质量" />
+  <meta name="description" content="AI Background Remover - AI 背景去除工具，快速、免费、高质量" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-  <title>PixelPure - AI Background Remover</title>
+  <title>AI Background Remover - Remove Image Backgrounds with AI</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
