--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,113 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#007AFF" />
-  <meta name="description" content="AI Background Remover - AI 背景去除工具，快速、免费、高质量" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-  <title>AI Background Remover - Remove Image Backgrounds with AI</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>AI Background Remover - Remove Image Backgrounds Free & Fast</title>
+  <meta name="title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
+  <meta name="description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results. No signup required. Perfect for e-commerce, design, and social media." />
+  <meta name="keywords" content="background remover, remove background, AI background remover, image background removal, transparent background, photo editor, ecommerce photos, product photos" />
+  <meta name="author" content="AI Background Remover" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://your-domain.com/" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://your-domain.com/" />
+  <meta property="og:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
+  <meta property="og:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results. No signup required." />
+  <meta property="og:image" content="https://your-domain.com/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="AI Background Remover" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://your-domain.com/" />
+  <meta name="twitter:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
+  <meta name="twitter:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results." />
+  <meta name="twitter:image" content="https://your-domain.com/twitter-image.png" />
+  <meta name="twitter:creator" content="@yourusername" />
+  
+  <!-- Alternate Languages -->
+  <link rel="alternate" hreflang="en" href="https://your-domain.com/" />
+  <link rel="alternate" hreflang="zh" href="https://your-domain.com/?lang=zh" />
+  <link rel="alternate" hreflang="es" href="https://your-domain.com/?lang=es" />
+  <link rel="alternate" hreflang="fr" href="https://your-domain.com/?lang=fr" />
+  <link rel="alternate" hreflang="ja" href="https://your-domain.com/?lang=ja" />
+  <link rel="alternate" hreflang="x-default" href="https://your-domain.com/" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+  
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "AI Background Remover",
+    "alternateName": "Background Remover AI",
+    "url": "https://your-domain.com",
+    "description": "Free AI-powered tool to remove image backgrounds instantly. High-quality results, no signup required.",
+    "applicationCategory": "DesignApplication",
+    "operatingSystem": "All",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "ratingCount": "1250",
+      "bestRating": "5",
+      "worstRating": "1"
+    },
+    "featureList": [
+      "AI-powered background removal",
+      "High-quality transparent PNG output",
+      "Free and unlimited use",
+      "No signup required",
+      "Support for JPG, PNG, WEBP formats",
+      "Fast processing (3-5 seconds)"
+    ],
+    "screenshot": "https://your-domain.com/screenshot.png"
+  }
+  </script>
+  
+  <!-- Additional Structured Data for SoftwareApplication -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "AI Background Remover",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "applicationCategory": "MultimediaApplication"
+  }
+  </script>
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>
+    <h1>AI Background Remover - Free Online Tool</h1>
+    <p>Remove image backgrounds instantly with AI. Free, fast, and high-quality results.</p>
+    <p>You need to enable JavaScript to use this application.</p>
+  </noscript>
   <div id="root"></div>
 </body>
 </html>
-
