--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,14 +12,14 @@
   <meta name="keywords" content="background remover, remove background, AI background remover, image background removal, transparent background, photo editor, ecommerce photos, product photos" />
   <meta name="author" content="AI Background Remover" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://your-domain.com/" />
+  <link rel="canonical" href="https://bg.airemover.im/" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://your-domain.com/" />
+  <meta property="og:url" content="https://bg.airemover.im/" />
   <meta property="og:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
   <meta property="og:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results. No signup required." />
-  <meta property="og:image" content="https://your-domain.com/og-image.png" />
+  <meta property="og:image" content="https://bg.airemover.im/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="AI Background Remover" />
@@ -27,19 +27,19 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://your-domain.com/" />
+  <meta name="twitter:url" content="https://bg.airemover.im/" />
   <meta name="twitter:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
   <meta name="twitter:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results." />
-  <meta name="twitter:image" content="https://your-domain.com/twitter-image.png" />
-  <meta name="twitter:creator" content="@yourusername" />
+  <meta name="twitter:image" content="https://bg.airemover.im/twitter-image.png" />
+  <meta name="twitter:creator" content="@airemover" />
   
   <!-- Alternate Languages -->
-  <link rel="alternate" hreflang="en" href="https://your-domain.com/" />
-  <link rel="alternate" hreflang="zh" href="https://your-domain.com/?lang=zh" />
-  <link rel="alternate" hreflang="es" href="https://your-domain.com/?lang=es" />
-  <link rel="alternate" hreflang="fr" href="https://your-domain.com/?lang=fr" />
-  <link rel="alternate" hreflang="ja" href="https://your-domain.com/?lang=ja" />
-  <link rel="alternate" hreflang="x-default" href="https://your-domain.com/" />
+  <link rel="alternate" hreflang="en" href="https://bg.airemover.im/" />
+  <link rel="alternate" hreflang="zh" href="https://bg.airemover.im/?lang=zh" />
+  <link rel="alternate" hreflang="es" href="https://bg.airemover.im/?lang=es" />
+  <link rel="alternate" hreflang="fr" href="https://bg.airemover.im/?lang=fr" />
+  <link rel="alternate" hreflang="ja" href="https://bg.airemover.im/?lang=ja" />
+  <link rel="alternate" hreflang="x-default" href="https://bg.airemover.im/" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -59,7 +59,7 @@
     "@type": "WebApplication",
     "name": "AI Background Remover",
     "alternateName": "Background Remover AI",
-    "url": "https://your-domain.com",
+    "url": "https://bg.airemover.im",
     "description": "Free AI-powered tool to remove image backgrounds instantly. High-quality results, no signup required.",
     "applicationCategory": "DesignApplication",
     "operatingSystem": "All",
@@ -83,7 +83,7 @@
       "Support for JPG, PNG, WEBP formats",
       "Fast processing (3-5 seconds)"
     ],
-    "screenshot": "https://your-domain.com/screenshot.png"
+    "screenshot": "https://bg.airemover.im/screenshot.png"
   }
   </script>
   
