添加: Plausible 流量分析

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -101,6 +101,9 @@
     "applicationCategory": "MultimediaApplication"
   }
   </script>
+  
+  <!-- Plausible Analytics -->
+  <script defer data-domain="airemover.im" src="https://p.studyx.ai/js/script.js"></script>
 </head>
 <body>
   <noscript>
