合并去水印功能

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,38 +6,39 @@
   <meta name="theme-color" content="#007AFF" />
   
   <!-- Primary Meta Tags -->
-  <title>AI Background Remover - Remove Image Backgrounds Free & Fast</title>
-  <meta name="title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
-  <meta name="description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results. No signup required. Perfect for e-commerce, design, and social media." />
-  <meta name="keywords" content="background remover, remove background, AI background remover, image background removal, transparent background, photo editor, ecommerce photos, product photos" />
-  <meta name="author" content="AI Background Remover" />
+  <title>AI Remover - Remove Background & Watermark Free with AI</title>
+  <meta name="title" content="AI Remover - Remove Background & Watermark Free with AI" />
+  <meta name="description" content="Free AI-powered background and watermark remover. Remove image backgrounds and watermarks instantly with high-quality results. No signup required. Perfect for e-commerce, design, and social media." />
+  <meta name="keywords" content="background remover, remove background, watermark remover, remove watermark, AI background remover, AI watermark remover, image background removal, transparent background, photo editor, ecommerce photos, product photos" />
+  <meta name="author" content="AI Remover" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://www.airemover.im/" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.airemover.im/" />
-  <meta property="og:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
-  <meta property="og:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results. No signup required." />
+  <meta property="og:title" content="AI Remover - Remove Background & Watermark Free with AI" />
+  <meta property="og:description" content="Free AI-powered background and watermark remover. Remove image backgrounds and watermarks instantly with high-quality results. No signup required." />
   <meta property="og:image" content="https://www.airemover.im/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:site_name" content="AI Background Remover" />
+  <meta property="og:site_name" content="AI Remover" />
   <meta property="og:locale" content="en_US" />
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://www.airemover.im/" />
-  <meta name="twitter:title" content="AI Background Remover - Remove Image Backgrounds Free & Fast" />
-  <meta name="twitter:description" content="Free AI-powered background remover. Remove image backgrounds instantly with high-quality results." />
+  <meta name="twitter:title" content="AI Remover - Remove Background & Watermark Free with AI" />
+  <meta name="twitter:description" content="Free AI-powered background and watermark remover. Remove image backgrounds and watermarks instantly with high-quality results." />
   <meta name="twitter:image" content="https://www.airemover.im/twitter-image.png" />
   <meta name="twitter:creator" content="@airemover" />
   
   <!-- Alternate Languages -->
   <link rel="alternate" hreflang="en" href="https://www.airemover.im/" />
   <link rel="alternate" hreflang="zh" href="https://www.airemover.im/?lang=zh" />
-  <link rel="alternate" hreflang="es" href="https://www.airemover.im/?lang=es" />
   <link rel="alternate" hreflang="fr" href="https://www.airemover.im/?lang=fr" />
+  <link rel="alternate" hreflang="es" href="https://www.airemover.im/?lang=es" />
+  <link rel="alternate" hreflang="pt" href="https://www.airemover.im/?lang=pt" />
   <link rel="alternate" hreflang="ja" href="https://www.airemover.im/?lang=ja" />
   <link rel="alternate" hreflang="x-default" href="https://www.airemover.im/" />
   
@@ -57,10 +58,10 @@
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
-    "name": "AI Background Remover",
-    "alternateName": "Background Remover AI",
+    "name": "AI Remover",
+    "alternateName": ["AI Background Remover", "AI Watermark Remover"],
     "url": "https://www.airemover.im",
-    "description": "Free AI-powered tool to remove image backgrounds instantly. High-quality results, no signup required.",
+    "description": "Free AI-powered tool to remove image backgrounds and watermarks instantly. High-quality results, no signup required.",
     "applicationCategory": "DesignApplication",
     "operatingSystem": "All",
     "offers": {
@@ -77,11 +78,13 @@
     },
     "featureList": [
       "AI-powered background removal",
+      "AI-powered watermark removal",
       "High-quality transparent PNG output",
       "Free and unlimited use",
       "No signup required",
       "Support for JPG, PNG, WEBP formats",
-      "Fast processing (3-5 seconds)"
+      "Fast processing (10-60 seconds)",
+      "Automatic watermark detection"
     ],
     "screenshot": "https://www.airemover.im/screenshot.png"
   }
@@ -92,7 +95,7 @@
   {
     "@context": "https://schema.org",
     "@type": "SoftwareApplication",
-    "name": "AI Background Remover",
+    "name": "AI Remover",
     "offers": {
       "@type": "Offer",
       "price": "0",
@@ -107,8 +110,8 @@
 </head>
 <body>
   <noscript>
-    <h1>AI Background Remover - Free Online Tool</h1>
-    <p>Remove image backgrounds instantly with AI. Free, fast, and high-quality results.</p>
+    <h1>AI Remover - Free Background & Watermark Remover</h1>
+    <p>Remove image backgrounds and watermarks instantly with AI. Free, fast, and high-quality results.</p>
     <p>You need to enable JavaScript to use this application.</p>
   </noscript>
   <div id="root"></div>
